# pgopher-py

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: python-package.yml
src/pgopher_py/: __init__.py  core.py  datatypes.py  input.py  parse.py  run.py  types.py  utils.py
