[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pgopher-py"
description = "PGOPHER Python interface"
readme = "README.md"
authors = [
  { name = "Michael Gatt" },
  { name = "Milan Ončák" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = []
license = { text = "MIT License" }
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/photophys/pgopher-py/blob/main/README.md"
Repository = "https://github.com/photophys/pgopher-py"
Issues = "https://github.com/photophys/pgopher-py/issues"
